# project-euler

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.config/: nextest.toml
crates/project-euler/: Cargo.toml
crates/project-euler-macros/: Cargo.toml
crates/project-euler-macros/src/: lib.rs
crates/project-euler-util/: Cargo.toml
crates/project-euler-util/benches/: benchmarks.rs
crates/project-euler-util/src/: lib.rs
crates/project-euler/benches/: benchmarks.rs
crates/project-euler/src/: main.rs
crates/project-euler/src/problems/: mod.rs  p0001.rs  p0002.rs  p0003.rs  p0004.rs  p0005.rs  p0006.rs  p0007.rs  p0008.rs
crates/project-euler/src/util/: mod.rs
src/: lib.rs
src/problems/: p0001.rs
