[package]
name = "project-euler-macros"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
authors = ["Linda Siemons <linda@catbrained.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.96", default-features = false, features = [ "parsing", "proc-macro" ]}
quote = "1.0.38"
