[package]
name = "project-euler-util"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
authors = ["Linda Siemons <linda@catbrained.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
