[package]
name = "project-euler"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
authors = ["Linda Siemons <linda@catbrained.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
project-euler-macros = { path = "../project-euler-macros" }
